src/test/ui/save-analysis/issue-101505.stderr
error: `self` parameter is only allowed in associated functions
  --> $DIR/issue-101505.rs:5:6
   |
LL | fn a(self) {}
   |      ^^^^ not semantically valid as function parameter
   |
   = note: associated functions are those in `impl` or `trait` definitions

error: aborting due to previous error

